qunicorn-chart/templates/server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    io.kompose.service: server
  name: server
  namespace: default
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: server
                port:
                  number: 8080
            path: /
            pathType: Prefix
